<resources>

    <string name="app_name">Personal Best</string>
    <string name="title_home">Home</string>

    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_stats">Stats</string>
    <string name="title_walks">Walks</string>
    <string name="title_friends">Friends</string>
    <string name="title_notifications">Notifications</string>

    // for initial activity
    <string name="feet_edit_text">ft</string>
    <string name="inches_edit_text">in</string>
    <string name="height_text_view">Enter Height:</string>
    <string name="walker_button_text">Walker</string>
    <string name="runner_button_text">Runner</string>
    <string name="walker_text_view">Walker or Runner?</string>
    <string name="next_button_text">Next</string>

    <string name="stepsDefault">Steps</string>
    <string name="statDefault">Stats</string>
    <string name="changeHeight">Height:</string>
    <string name="changeGoal">Goal:</string>
    <string name="stepSign">steps</string>
    <string name="autoGoalText">Auto goals: </string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>

    <string name="metText">Meet goal only once per day</string>
    <string name="ignoredText">Ignore goal updates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // for friend request page
    <string name="enterEmail">Enter their email</string>

</resources>
