<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_person_add_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <FrameLayout
        android:id="@+id/mainScreen"
        android:layout_width="387dp"
        android:layout_height="612dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/changeStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:hint="Add 500"
            android:inputType="number"
            android:textSize="24sp"
            android:layout_marginTop="490dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.697"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814" />

        <EditText
            android:id="@+id/changeTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="490dp"
            android:layout_marginRight="0dp"
            android:hint="Change T"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.697"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814" />

        <Button
            android:id="@+id/changeTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="490dp"
            android:layout_marginRight="0dp"
            android:hint="Change T"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.697"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814" />

        <pl.pawelkleczkowski.customgauge.CustomGauge
            android:id="@+id/gauge"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            app:gaugeEndValue="100"
            app:gaugePointEndColor="@color/DarkBlue"
            app:gaugePointStartColor="@color/LightSkyBlue"
            app:gaugeStartAngle="135"
            app:gaugeStartValue="0"
            app:gaugeStrokeCap="ROUND"
            app:gaugeStrokeColor="@color/Gray"
            app:gaugeStrokeWidth="10dp"
            app:gaugeSweepAngle="270" />

        <TextView
            android:id="@+id/textViewGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="310dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSteps"
            app:layout_constraintVertical_bias="0.061" />

        <TextView
            android:id="@+id/textViewStats"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/statDefault"
            android:textSize="50dp"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGoal"
            app:layout_constraintVertical_bias="0.287"
            />

        <TextView
            android:id="@+id/textViewSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/stepsDefault"
            android:textSize="70dp"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.287"
            tools:text="@string/stepsDefault" />

        <Button
            android:id="@+id/startStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="161dp"
            android:layout_marginTop="445dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="162dp"
            android:layout_marginBottom="50dp"
            android:text="Start/Stop"
            app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStats" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/walkFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


    <FrameLayout
        android:id="@+id/statFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/profileFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="160dp">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/friendFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="160dp">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/friendRequestFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="160dp">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/dashFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="0dp">

    </FrameLayout>



    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation">
    </android.support.design.widget.BottomNavigationView>


  
</android.support.constraint.ConstraintLayout>